# pythonproj

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  copier.yml  pyproject.toml  zizmor.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-title.yml
template/: .copier-answers.yml.jinja  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md.jinja  CHANGELOG.md  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md.jinja  Dockerfile.jinja  LICENSE.jinja  README.md.jinja  SECURITY.md.jinja  compose.yaml.jinja  justfile.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  zizmor.yml
template/.claude/: settings.json
template/.github/: CODEOWNERS.jinja  PULL_REQUEST_TEMPLATE.md  dependabot.yml.jinja
template/.github/ISSUE_TEMPLATE/: bug_report.yml.jinja  feature_request.yml
template/.github/workflows/: benchmarks.yml  docs.yml  lint.yml  mutmut.yml  pr-title.yml  pre-commit.yml  release.yml.jinja  test.yml.jinja
template/benchmarks/: test_sample.py.jinja
template/docs/: index.md.jinja  reference.md.jinja
template/src/{{ package_name }}/: __init__.py.jinja  __main__.py.jinja  cli.py.jinja  main.py.jinja  settings.py.jinja
template/tests/: test_smoke.py.jinja
tests/: test_generation.py
