[project]
name = "pythonproj-template-tests"
version = "0"
description = "Generation tests for the pythonproj copier template"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "copier>=9.3.0",
    "pytest>=8.0.0",
    "pytest-pretty>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
